--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul class="values-list-wrapper">
             <li class="value-list list-stylization">
               <div class="main-svg-wrapper">
-                <svg class="main-svg-item" width="70" heigth="70">
+                <svg class="main-svg-item" width="70" height="70">
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -89,7 +89,7 @@
             </li>
             <li class="value-list list-stylization">
               <div class="main-svg-wrapper">
-                <svg class="main-svg-item" width="70" heigth="70">
+                <svg class="main-svg-item" width="70" height="70">
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -102,7 +102,7 @@
             </li>
             <li class="value-list list-stylization">
               <div class="main-svg-wrapper">
-                <svg class="main-svg-item" width="70" heigth="70">
+                <svg class="main-svg-item" width="70" height="70">
                   <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -115,7 +115,7 @@
             </li>
             <li class="value-list list-stylization">
               <div class="main-svg-wrapper">
-                <svg class="main-svg-item" width="70" heigth="70">
+                <svg class="main-svg-item" width="70" height="70">
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
